--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My Website
+title:  Libereco Mono
 
 # Your name to show in the footer
 author: Douglas McSqueaky
