--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ author: Douglas McSqueaky
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - What is Monero?: "https://www.getmonero.org/get-started/what-is-monero/"
+    - Monero News: "https://monero.observer/"
+    - FAQ: "https://www.getmonero.org/get-started/faq/"
 
 ################
 # --- Logo --- #
@@ -51,7 +51,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+# rss: true  # remove this line if you don't want to show an RSS link at the bottom
 # facebook:
   github: DouglasMcSqueaky
 # twitter: daattali
@@ -90,7 +90,7 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: false
+  twitter: true
   facebook: false
   linkedin: false
   vk: false
