--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+# email: ""
 # rss: true  # remove this line if you don't want to show an RSS link at the bottom
 # facebook:
   github: DouglasMcSqueaky
@@ -58,7 +58,7 @@ social-network-links:
 #  patreon: DeanAttali
 # youtube: c/daattali
 #  medium: yourname
-#  reddit: yourname
+  reddit: Douglas_McSqueaky
 #  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
