--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,6 @@
 
 # Name of website
 title:  Libereco Mono
-subtitle: Sine secretis nulla libertas.
 author: Douglas McSqueaky
 
 ###############################################
@@ -50,7 +49,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "squ3aky@tutanota.com"
-# rss: true  # remove this line if you don't want to show an RSS link at the bottom
+rss: true  # remove this line if you don't want to show an RSS link at the bottom
 # facebook:
   github: DouglasMcSqueaky
 # twitter: daattali
@@ -81,7 +80,7 @@ social-network-links:
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: Updates to Libereco Mono Blog
 
 ###########################
 # --- General options --- #
