--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "squ3aky@tutanota.com"
-rss: true  # remove this line if you don't want to show an RSS link at the bottom
+# rss: true  # remove this line if you don't want to show an RSS link at the bottom
 # facebook:
   github: DouglasMcSqueaky
 # twitter: daattali
@@ -82,7 +82,7 @@ rss: true  # remove this line if you don't want to show an RSS link at the botto
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: Updates to Libereco Mono Blog
+# rss-description: Updates to Libereco Mono Blog
 
 ###########################
 # --- General options --- #
