--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ navbar-links:
     - What is Monero?: "https://www.getmonero.org/get-started/what-is-monero/"
     - Monero News: "https://monero.observer/"
     - FAQ: "https://www.getmonero.org/get-started/faq/"
+    - RSS: "https://douglasmcsqueaky.github.io/feed.xml"
 
 ################
 # --- Logo --- #
@@ -97,7 +98,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-# url-pretty: "MyWebsite.com"
+  url-pretty: "https://douglasmcsqueaky.github.io/feed.xml"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
