--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ social-network-links:
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
-  telegram: McSqu3aky
+#  telegram:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  bluesky: yourname
